<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/common_bg" android:layout_width="510.0dip" android:layout_height="300.0dip">
        <include android:id="@id/common_title" layout="@layout/common_title" />
        <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/common_title_layout" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/play_account_text" />
            <TextView android:textSize="16.0sp" android:layout_gravity="center_vertical" android:id="@id/user_name_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/account_login_layout" android:background="@drawable/common_input_bg" android:layout_width="fill_parent" android:layout_height="91.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_text" />
                <View android:layout_gravity="center_vertical" android:id="@id/line_view" android:background="@color/line_color" android:layout_width="0.5dip" android:layout_height="20.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/input_color" android:textColorHint="@color/login_edit_text_color" android:layout_gravity="center_vertical" android:id="@id/phone_number_et" android:background="@null" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/photo_hint_text" android:layout_weight="1.0" android:inputType="phone" android:imeOptions="flagNoExtractUi" />
                <Button android:textSize="12.0sp" android:textColor="@color/border_line_color" android:layout_gravity="center_vertical" android:id="@id/get_validate_btn" android:background="@drawable/border_line_btn" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/get_validate_code_text" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/validate_text" />
                <View android:layout_gravity="center_vertical" android:id="@id/validate_line_view" android:background="@color/line_color" android:layout_width="0.5dip" android:layout_height="20.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/input_color" android:textColorHint="@color/login_edit_text_color" android:layout_gravity="center_vertical" android:id="@id/validate_code_et" android:background="@null" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/validate_hint_text" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="flagNoExtractUi" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
            <Button android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/submit_btn" android:background="@drawable/common_btn" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/submit_text" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>