<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/common_bg" android:layout_width="510.0dip" android:layout_height="300.0dip">
        <include android:id="@id/common_title" layout="@layout/fysdk_common_title" />
        <LinearLayout android:orientation="vertical" android:id="@id/account_login_layout" android:background="@drawable/common_input_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="15.0dip">
            <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/common_title_layout" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="16.0sp" android:textColor="@color/black1" android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="72.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/play_account_text" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black1" android:layout_gravity="center_vertical" android:id="@id/user_name_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/new_ps_text" />
                <View android:layout_gravity="center_vertical" android:background="@color/line_color" android:layout_width="0.5dip" android:layout_height="20.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/input_color" android:textColorHint="@color/login_edit_text_color" android:layout_gravity="center_vertical" android:id="@id/new_ps_et" android:background="@null" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/new_ps_hint_text" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="flagNoExtractUi" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/confirm_ps_text" />
                <View android:layout_gravity="center_vertical" android:background="@color/line_color" android:layout_width="0.5dip" android:layout_height="20.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/input_color" android:textColorHint="@color/login_edit_text_color" android:layout_gravity="center_vertical" android:id="@id/confirm_ps_et" android:background="@null" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/confirm_ps_hint_text" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="flagNoExtractUi" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
            <Button android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/submit_btn" android:background="@drawable/common_btn" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/submit_text" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>