<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_vertical_title" />
    <LinearLayout android:id="@id/common_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip">
        <EditText android:textSize="14.0sp" android:textColor="@color/black1" android:layout_gravity="center_vertical" android:id="@id/update_info_et" android:background="@drawable/common_input_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/hint_update_info_text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/sex_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip">
        <RelativeLayout android:id="@id/boy_layout" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
            <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/boy_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/boy_selected_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selected_pay_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" />
        <RelativeLayout android:id="@id/girl_layout" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
            <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/girl_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/girl_selected_icon" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selected_pay_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip">
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/update_btn" android:background="@drawable/common_btn" android:layout_width="fill_parent" android:layout_height="35.0dip" android:text="@string/update_btn_text" />
    </LinearLayout>
</LinearLayout>