<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/bg_layout" android:background="@drawable/common_bg" android:layout_width="420.0dip" android:layout_height="200.0dip">
        <LinearLayout android:gravity="center" android:id="@id/common_title_layout" android:background="@drawable/common_title_bg" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <ImageView android:id="@id/message_title_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:id="@id/top_line_view" android:background="@color/top_line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/common_title_layout" />
        <RelativeLayout android:id="@id/quick_login_layout" android:background="@drawable/common_input_bg" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/top_line_view">
            <ImageView android:id="@id/quick_left_icon" android:background="@drawable/quick_left_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_centerVertical="true" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_toRightOf="@id/quick_left_icon" android:layout_centerVertical="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/black1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_in" />
                <TextView android:textSize="12.0sp" android:textColor="@color/message_send_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/send_message_finished" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/quick_login_layout">
            <TextView android:textSize="13.0sp" android:textColor="@color/other_login_color" android:id="@id/other_login_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_login" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="11.0sp" android:textColor="@color/feiyou_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agree_text" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>